hphp/test/zend/good/ext/gd/tests/gif2jpg.php.skipif
<?php
	if (!extension_loaded('gd')) {
		die("skip gd extension not available.");
	}

	if (!function_exists("imagejpeg")) {
		die("skip jpeg support unavailable");
	}
	if (!function_exists("imagecreatefromgif")) {
		die("skip gif read support unavailable");
	}
?>